Bug 410220 - Adding relationships via the toolbar creates two lines in state and activity diagrams
Summary: Adding relationships via the toolbar creates two lines in state and activity ...
Status: RESOLVED FIXED
Alias: None
Product: umbrello
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.28.80 (KDE Applications 19.07.80)
Platform: Other All
: NOR normal
Target Milestone: ---
Assignee: Umbrello Development Group
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-07-26 06:35 UTC by Ralf Habacker
Modified: 2019-07-26 08:19 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.28.90 (KDE Applications 19.07.90)
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ralf Habacker 2019-07-26 06:35:29 UTC
STEPS TO REPRODUCE
1. start umbrello
2. add state (or activity) diagram
3. add two states
4. connect states with an association
5. delete the association

OBSERVED RESULT
There is still an association present

EXPECTED RESULT
There should only one association be added

KF5/Qt5 version is irrelevant
Comment 1 Ralf Habacker 2019-07-26 08:05:44 UTC
> 5. delete the association
This is an issue caused by how the undo framework performs the redo operation. If the widget was not found in the scene, a new widget is created instead of adding the one contained in the undo object to the scene.
Comment 2 Ralf Habacker 2019-07-26 08:19:56 UTC
Git commit e289fca2352cd61ec478af01d1daa7f826a775cc by Ralf Habacker.
Committed on 26/07/2019 at 08:19.
Pushed by habacker into branch 'Applications/19.08'.

Fix 'Adding relationships via the toolbar creates two lines in state and activity diagrams'
FIXED-IN:2.28.90 (KDE Applications 19.07.90)

M  +16   -11   umbrello/cmds/widget/cmdcreatewidget.cpp

https://commits.kde.org/umbrello/e289fca2352cd61ec478af01d1daa7f826a775cc