Fix 'Adding relationships via the toolbar creates two lines in state and activity diagrams'

BUG:410220
FIXED-IN:2.28.90 (KDE Applications 19.07.90)